--- a/FluentWinver/FluentWinver.csproj
+++ b/FluentWinver/FluentWinver.csproj
@@ -48,6 +48,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RTWinverCore\RTWinverCore.csproj" />
+    <ProjectReference Include="..\RTWinver.Core\RTWinver.Core.csproj" />
   </ItemGroup>
 </Project>
