--- a/FluentWinver/FluentWinver.csproj
+++ b/FluentWinver/FluentWinver.csproj
@@ -10,16 +10,18 @@
     <UseWinUI>true</UseWinUI>
 	<LangVersion>11.0</LangVersion>
 	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-	<WindowsPackageType>None</WindowsPackageType>
 	<WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
 	<AssemblyVersion>1.0.0.0</AssemblyVersion>
-	<FileVersion>2.0.0.1</FileVersion>
+	<FileVersion>2.0.0.0</FileVersion>
 	<Product>Fluent Winver</Product>
 	<Authors>MinecraftXinYi</Authors>
 	<Company>Personal</Company>
 	<Description>A WinUI3 version of winver.</Description>
-	<Version></Version>
+	<Version>2.0.0.0</Version>
+	<EnableMsixTooling>true</EnableMsixTooling>
+	<PublishProfile>win10-$(Platform).pubxml</PublishProfile>
   </PropertyGroup>
+	
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
     <Deterministic>False</Deterministic>
   </PropertyGroup>
@@ -50,4 +52,12 @@
   <ItemGroup>
     <ProjectReference Include="..\RTWinver.Core\RTWinver.Core.csproj" />
   </ItemGroup>
+
+	<ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
+		<ProjectCapability Include="Msix" />
+	</ItemGroup>
+
+	<PropertyGroup Condition="'$(DisableHasPackageAndPublishMenuAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
+		<HasPackageAndPublishMenu>true</HasPackageAndPublishMenu>
+	</PropertyGroup>
 </Project>
