--- a/RTWinver.Core/RTWinver.Core.csproj
+++ b/RTWinver.Core/RTWinver.Core.csproj
@@ -1,16 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+	<Product>RTWinver Core</Product>
     <TargetFrameworks>net6.0-windows10.0.17763.0;netstandard2.0</TargetFrameworks>
-    <Nullable>enable</Nullable>
+	<RootNamespace>RTWinver</RootNamespace>
     <LangVersion>11.0</LangVersion>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Nullable>enable</Nullable>
+	<ProductVersion>2.0.0.0</ProductVersion>
+	<FileVersion>2.0.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
 	  <PackageReference Condition="'$(TargetFramework)' == 'netstandard2.0'" Include="Microsoft.Windows.SDK.Contracts" Version="10.0.17763.1000" />
-	  <PackageReference Include="System.Memory" Version="4.5.5" />
   </ItemGroup>
 
 </Project>
