--- a/FluentWinver/FluentWinver.csproj
+++ b/FluentWinver/FluentWinver.csproj
@@ -2,12 +2,12 @@
   <PropertyGroup>
 	<Product>Fluent Winver</Product>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
+    <TargetFramework>net8.0-windows10.0.19041.0</TargetFramework>
     <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
     <RootNamespace>FluentWinver</RootNamespace>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <Platforms>x86;x64;ARM64</Platforms>
-    <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
+    <RuntimeIdentifiers>win-x86;win-x64;win-arm64</RuntimeIdentifiers>
     <UseWinUI>true</UseWinUI>
 	<LangVersion>12.0</LangVersion>
 	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -17,15 +17,15 @@
 	<Version>1.0.0.0</Version>
 	<FileVersion>1.0.0.0</FileVersion>
 	<EnableMsixTooling>true</EnableMsixTooling>
-	<PublishProfile>win10-$(Platform).pubxml</PublishProfile>
+	<PublishProfile>win-$(Platform).pubxml</PublishProfile>
 	<StartupObject>FluentWinverProg.Program</StartupObject>
   </PropertyGroup>
 	
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Labs.WinUI.SettingsControls" Version="0.0.18" />
-    <PackageReference Include="Microsoft.Graphics.Win2D" Version="1.0.5.1" />
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
-    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
+    <PackageReference Include="Microsoft.Graphics.Win2D" Version="1.2.0" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.5.240607001" />
+    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.2428" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
 
