--- a/FluentWinver/FluentWinver.csproj
+++ b/FluentWinver/FluentWinver.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows10.0.19041.0</TargetFramework>
     <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
+	<AssemblyName>FluentWinver</AssemblyName>
     <RootNamespace>FluentWinver</RootNamespace>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <Platforms>x86;x64;ARM64</Platforms>
@@ -11,14 +12,14 @@
     <UseWinUI>true</UseWinUI>
 	<LangVersion>12.0</LangVersion>
 	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+	<StartupObject>FluentWinverProg.Program</StartupObject>
 	<Authors>MinecraftXinYi</Authors>
-	<Company>Personal</Company>
+	<Company>MinecraftXinYi Person</Company>
 	<Description>A WinUI3 version of winver.</Description>
-	<Version>1.0.0.0</Version>
-	<FileVersion>1.0.0.0</FileVersion>
 	<EnableMsixTooling>true</EnableMsixTooling>
 	<PublishProfile>win-$(Platform).pubxml</PublishProfile>
-	<StartupObject>FluentWinverProg.Program</StartupObject>
+	<ProductVersion>1.0.0.0</ProductVersion>
+	<FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
 	
   <ItemGroup>
