--- a/SharpWinverLib/SharpWinverLib.csproj
+++ b/SharpWinverLib/SharpWinverLib.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	<Product>SharpWinver Core</Product>
-    <TargetFrameworks>net6.0-windows10.0.17763.0;netstandard2.0</TargetFrameworks>
-	<AssemblyName>SharpWinver</AssemblyName>
+	<Product>SharpWinver Library</Product>
+    <TargetFramework>netstandard2.0</TargetFramework>
+	<AssemblyName>SharpWinverLib</AssemblyName>
 	<RootNamespace>SharpWinver</RootNamespace>
     <LangVersion>10.0</LangVersion>
 	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -14,7 +14,6 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
-	  <PackageReference Condition="'$(TargetFramework)' == 'netstandard2.0'" Include="Microsoft.Windows.SDK.Contracts" Version="10.0.17763.1000" />
   </ItemGroup>
 
 </Project>
