--- a/FluentWinver/FluentWinver.csproj
+++ b/FluentWinver/FluentWinver.csproj
@@ -12,13 +12,12 @@
     <LangVersion>12.0</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <StartupObject>FluentWinverProg.Program</StartupObject>
-    <Authors>MinecraftXinYi</Authors>
-    <Company>MinecraftXinYi Person</Company>
-    <Description>A WinUI3 version of winver.</Description>
     <EnableMsixTooling>true</EnableMsixTooling>
     <PublishProfile>win-$(Platform).pubxml</PublishProfile>
     <ProductVersion>1.0.0.0</ProductVersion>
     <FileVersion>1.0.0.0</FileVersion>
+    <AssemblyTitle>Fluent Winver</AssemblyTitle>
+    <Company>MinecraftXinYi Person</Company>
   </PropertyGroup>
 
   <ItemGroup>
