SharpWinver Library 重构底层代码，移出一部分不必要的功能到 Fluent Winver 项目

--- a/SharpWinverLib/SharpWinverLib.csproj
+++ b/SharpWinverLib/SharpWinverLib.csproj
@@ -13,6 +13,8 @@
     <Title>SharpWinver Library</Title>
     <Authors>MinecraftXinYi</Authors>
     <Description>A .NET Standard library that provides information of Windows OS via CSharp methods.</Description>
+    <CheckNotRecommendedTargetFramework>false</CheckNotRecommendedTargetFramework>
+    <NoWarn>$(NoWarn);NETSDK1215</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
