--- a/FluentWinver/FluentWinver.csproj
+++ b/FluentWinver/FluentWinver.csproj
@@ -15,11 +15,13 @@
     <StartupObject>FluentWinverProg.Program</StartupObject>
     <EnableMsixTooling>true</EnableMsixTooling>
     <PublishProfile>win-$(Platform).pubxml</PublishProfile>
+    <Configurations>Debug;Release;Debug-AOT;Release-AOT</Configurations>
     <ProductVersion>1.0.0.0</ProductVersion>
     <FileVersion>1.0.0.0</FileVersion>
     <AssemblyTitle>Fluent Winver</AssemblyTitle>
     <Company>MinecraftXinYi Person</Company>
   </PropertyGroup>
+  <Import Project="..\ClrAotConfig.props" />
   <ItemGroup>
     <None Remove="MSIXRuntimeInfo.json" />
   </ItemGroup>
@@ -32,6 +34,7 @@
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.WinUI.Controls.SettingsControls" Version="8.1.240916" />
     <PackageReference Include="Microsoft.Graphics.Win2D" Version="1.3.0" />
+    <PackageReference Include="Microsoft.Windows.CsWinRT" Version="2.2.0" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.240923002" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
