[Fluent Winver] 优化发布配置文件。 [SharpWinver Library] 简化一些调用和类型名称。

--- a/FluentWinver/FluentWinver.csproj
+++ b/FluentWinver/FluentWinver.csproj
@@ -21,7 +21,7 @@
     <AssemblyTitle>Fluent Winver</AssemblyTitle>
     <Company>MinecraftXinYi Person</Company>
   </PropertyGroup>
-  <Import Project="..\ClrAotConfig.props" />
+  <Import Project="NativeAOTConfig.props" />
   <ItemGroup>
     <None Remove="MSIXRuntimeInfo.json" />
   </ItemGroup>
