[SharpWinver Library] 几乎完全重构

--- a/SharpWinverLib.Samples/SharpWinverNativeAOTest/SharpWinverNativeAOTest.csproj
+++ b/SharpWinverLib.Samples/SharpWinverNativeAOTest/SharpWinverNativeAOTest.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>SharpWinverNativeAOTest</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Nullable>enable</Nullable>
     <PublishAot>true</PublishAot>
     <IsAotCompatible>true</IsAotCompatible>
