--- a/FluentWinver/FluentWinver.csproj
+++ b/FluentWinver/FluentWinver.csproj
@@ -16,8 +16,9 @@
     <EnableMsixTooling>true</EnableMsixTooling>
     <PublishProfile>win-$(Platform).pubxml</PublishProfile>
     <Configurations>Debug;Release;Debug-AOT;Release-AOT</Configurations>
-    <ProductVersion>1.0.0.0</ProductVersion>
-    <FileVersion>1.0.0.0</FileVersion>
+    <CodeVersion>1.0.0</CodeVersion>
+    <ProductVersion>$(CodeVersion)</ProductVersion>
+    <FileVersion>$(CodeVersion).2</FileVersion>
     <AssemblyTitle>Fluent Winver</AssemblyTitle>
     <Company>MinecraftXinYi Person</Company>
   </PropertyGroup>
