--- a/SharpWinNTInterop/SharpWinNTInterop.csproj
+++ b/SharpWinNTInterop/SharpWinNTInterop.csproj
@@ -1,13 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Product>NanoWin32Registry</Product>
+    <Product>.NET-WinNT Interop</Product>
     <TargetFramework>netstandard1.1</TargetFramework>
-    <RootNamespace>NanoWin32Registry</RootNamespace>
+    <RootNamespace>SharpWinNTInterop</RootNamespace>
     <LangVersion>10.0</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Nullable>enable</Nullable>
-    <ProductVersion>1.0.0.0</ProductVersion>
-    <FileVersion>1.0.0.0</FileVersion>
+    <CodeVersion>1.0.0</CodeVersion>
+    <ProductVersion>$(CodeVersion)</ProductVersion>
+    <FileVersion>$(CodeVersion).1</FileVersion>
+    <AssemblyTitle>.NET-WinNT Interop</AssemblyTitle>
+    <Company>MinecraftXinYi Person</Company>
     <CheckNotRecommendedTargetFramework>false</CheckNotRecommendedTargetFramework>
     <NoWarn>$(NoWarn);NETSDK1215</NoWarn>
   </PropertyGroup>
