--- a/FluentWinver/FluentWinver.csproj
+++ b/FluentWinver/FluentWinver.csproj
@@ -12,11 +12,11 @@
     <UseWinUI>true</UseWinUI>
     <LangVersion>12.0</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <StartupObject>FluentWinverProg.Program</StartupObject>
+    <DefineConstants>DISABLE_XAML_GENERATED_MAIN</DefineConstants>
     <EnableMsixTooling>true</EnableMsixTooling>
     <PublishProfile>win-$(Platform).pubxml</PublishProfile>
     <Configurations>Debug;Release;Debug-AOT;Release-AOT</Configurations>
-    <CodeVersion>1.0.0</CodeVersion>
+    <CodeVersion>0.8.3</CodeVersion>
     <ProductVersion>$(CodeVersion)</ProductVersion>
     <FileVersion>$(CodeVersion).2</FileVersion>
     <AssemblyTitle>Fluent Winver</AssemblyTitle>
@@ -33,15 +33,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.WinUI.Controls.SettingsControls" Version="8.1.240916" />
+    <PackageReference Include="CommunityToolkit.WinUI.Controls.SettingsControls" Version="8.2.250129-preview2" />
     <PackageReference Include="Microsoft.Graphics.Win2D" Version="1.3.0" />
     <PackageReference Include="Microsoft.Windows.CsWinRT" Version="2.2.0" />
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.240923002" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.250108002" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SharpWinver\SharpWinver.csproj" />
+    <ProjectReference Include="..\WinAppModelHelpers\WinAppModelHelpers.csproj" />
   </ItemGroup>
 
 	<ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
