--- a/MCXin.WinNT/MCXin.WinNT.csproj
+++ b/MCXin.WinNT/MCXin.WinNT.csproj
@@ -1,15 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Product>.NET-NativeInterop_WinNT</Product>
+    <Product>MCXinNET-WinNT</Product>
     <TargetFramework>netstandard1.1</TargetFramework>
-    <RootNamespace>SharpWinNTInterop</RootNamespace>
+    <RootNamespace>MinecraftXinYi.WindowsNT</RootNamespace>
     <LangVersion>10.0</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Nullable>enable</Nullable>
-    <CodeVersion>1.1.0</CodeVersion>
+    <CodeVersion>1.2.0</CodeVersion>
     <ProductVersion>$(CodeVersion)</ProductVersion>
     <FileVersion>$(CodeVersion).1</FileVersion>
-    <AssemblyTitle>.NET Native API Interop for Windows NT</AssemblyTitle>
+    <AssemblyTitle>MinecraftXinYi's .NET Toolkit for Windows NT</AssemblyTitle>
     <Company>MinecraftXinYi Person</Company>
     <CheckNotRecommendedTargetFramework>false</CheckNotRecommendedTargetFramework>
     <NoWarn>$(NoWarn);NETSDK1215</NoWarn>
